# ex2_cpp_rom_and_daniel

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Chessmen.cpp  Chessmen.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  chess  chess.cpp  chess.h  makefile
